数据资源 + 新闻

--- a/南沙图书馆/src/news-net-show.html
+++ b/南沙图书馆/src/news-net-show.html
@@ -26,7 +26,7 @@
 					<ul>
 						<li><a href="index.html">首页</a></li>
 						<li><a href="about.html">走进南图</a></li>
-						<li><a href="news.html">资讯动态</a></li>
+						<li class="active"><a href="news.html">资讯动态</a></li>
 						<li><a href="reader.html">我是读者</a></li>
 						<li><a href="resource.html">数字资源</a></li>
 						<li><a href="theme.html">特色专题</a></li>
@@ -42,11 +42,14 @@
 				<div class="main clearfix">
 					<div class="aside">
 						<div class="title">
-							通用新闻详情页
+							资讯动态
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active"><a href="#">通用新闻详情页</a></li>
+								<li><a href="news.html">新闻信息</a></li>
+								<li><a href="news-notice.html">通知公告</a></li>
+								<li><a href="news-talk.html">南图讲坛</a></li>
+								<li class="active"><a href="news-net.html">网上展览</a></li>
 							</ul>
 						</div>
 					</div>
@@ -54,23 +57,26 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>资讯动态</span> <span class="gap">/</span> 通用新闻详情页
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>资讯动态</span> <span class="gap">/</span> 网上展览
 							</div>
 							<div class="text">
-								通用新闻详情页
+								网上展览
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							
+
 							<div class="news-detail">
 								<div class="detail-title text-center mb20">
-									<strong class="font-20 mb10">南沙少儿图书馆及电子阅览室今日开馆迎来首批百名小读者</strong>
+									<strong class="font-20 mb10">网上展览网上展览网上展览网上展览网上展览网上展览</strong>
 									<div class="sub mt5">
 										发表于：2019-01-12　　　作者：南方都市报
 									</div>
 								</div>
 								<div class="detail-content pdb20">
+									<div class="net-img-views">
+										
+									</div>
 									<div class="editor">
 										<p>　　本报讯 今日（4月20日）下午，在第十七个“世界读书日”来临之际，位于广州市南沙区金蕉大道的南沙区图书馆举办了“悦读人生•幸福南沙”——“ 4•23”世界读书日系列活动暨广州少年儿童图书馆南沙分馆开放活动。来自南沙区金隆小学的约100多名少儿读者参加了该次活动，成为该馆的第一批小读者。 </p>
 										<p>　　据了解，广州少年儿童图书馆南沙分馆，建筑面积1500平方米，藏书1.5万册，少儿报刊近100种，少儿阅览座位100座，其中幼儿阅览座位60座，设有连通式阅览区、低幼儿阅览区、亲子阅读区。从去年11月份对一楼进行功能室改造，现在已全部完成，借“4•23”世界读书日到来之际，一楼少儿馆及三楼电子阅览室从今日起，正式向读者开放。其中设置的电子阅览室有两间，每间面积为60平方米，共有阅览座席为50个，互联网接入带宽为10M，向读者免费提供服务。 </p>
