--- a/南沙图书馆/src/news-talk.html
+++ b/南沙图书馆/src/news-talk.html
@@ -71,7 +71,7 @@
 								<a href="javascript:;">
 									<i class="icon icon-tips">?</i>
 									报名方式
-									<div class="tooltip">
+									<div class="tooltip2">
 										<div class="arrow"></div>
 										电话39052638；读者QQ群 295517339、<br />
 										138627811、435684217；或直接到<br />
