--- a/南沙图书馆/src/resource-theme.html
+++ b/南沙图书馆/src/resource-theme.html
@@ -46,10 +46,10 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active"><a href="resource.html">电子报刊</a></li>
+								<li><a href="resource.html">电子报刊</a></li>
 								<li><a href="resource-ebook.html">电子图书</a></li>
 								<li><a href="#">南沙人文</a></li>
-								<li><a href="resource-theme.html">主题资源</a></li>
+								<li class="active"><a href="resource-theme.html">主题资源</a></li>
 								<li><a href="resource-media.html">多媒体</a></li>
 								<li><a href="resource-trial.html">试用资源</a></li>
 								<li><a href="resource-open.html">开放存储资源</a></li>
@@ -61,92 +61,104 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>数字资源</span> <span class="gap">/</span> 电子报刊
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>数字资源</span> <span class="gap">/</span> 主题资源
 							</div>
 							<div class="text">
-									电子报刊
+									主题资源
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							<!-- 新闻 -->
-							<div class="news-list">
+							<!-- 主题资源 -->
+							<div class="resource-theme-list">
 								<ul>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 									<li>
-										<a href="news-show.html" target="_blank">
-											<span class="pull-right text-info">2017-11-26</span>
-											<span class="t">南沙区图书馆“外包”走出新路</span>
-										</a>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
+									</li>
+									<li>
+										<a href="#" class="img"><img src="./assets/images/p4.png" alt=""></a>
+										<a href="#" class="t">我喜欢生命本来的样子</a>
 									</li>
 								</ul>
 							</div>
-							<!-- 新闻 -->
+							<!-- 主题资源 -->
 
 							<!-- 分页 -->
 							<ul class="pagination">
