--- a/南沙图书馆/src/reader-book-show.html
+++ b/南沙图书馆/src/reader-book-show.html
@@ -42,7 +42,7 @@
 				<div class="main clearfix">
 					<div class="aside">
 						<div class="title">
-							我是读者
+							图书推荐
 						</div>
 						<div class="nav">
 							<ul>
@@ -88,66 +88,62 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>我是读者</span> <span class="gap">/</span> 读者须知
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>我是读者</span> <span class="gap">/</span> 图书推荐
 							</div>
 							<div class="text">
-								办证须知
+								新书介绍
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							<div class="font-18 mb10">
-								<strong>一、申办手续：</strong>
+							<!-- 新书推荐详情 -->
+							<div class="news-detail">
+								<div class="detail-title text-center mb20">
+									<strong class="font-20 mb10">拥有一个你说了算的人生</strong>
+									<div class="sub mt5">
+										发表于：2019-01-12　　　作者：南方都市报
+									</div>
+								</div>
+								<div class="book-show">
+									<div class="img">
+										<img src="./assets/images/8.png" alt="">
+									</div>
+									<div class="book-detail">
+										<strong class="font-16">著者：</strong>	xxxxxx<br />
+										<strong class="font-16">出版社：</strong> xxxxxx<br />
+										<strong class="font-16">出版时间：</strong> 2019-01-01 <br />
+										<strong class="font-16">索书号：</strong> 44255-234
+										<div class="strong font-16 mt20 mb20">
+											图书简介
+										</div>
+										<div class="editor">
+											<p>一个人的生命，终究是为了活出自己。 如果你有幸在很小的时候就被告知这一点，并身体力行，那么你或许会有一个非常不同的人生起点。 自1992年考入北京大学心理学系，武志红对这个问题的思考不断深入，到现在已有25年。</p>
+											<p>在这期间，他通过十几本书、几百万字文字、上千篇文章，不断向自己和广大读者传达一个观点：成为你自己。</p>
+											<p>他不仅一直在身体力行这一哲学，还借助心理咨询和大量真实案例对当代社会人的心理状态有了细致入微的解读。</p>
+											<p>2019年，武志红老师推出迄今为止zui重要代表作《拥有一个你说了算的人生》，将自己多年的思考集中到这套书中，分活出自我篇和终身成长篇两册。其中， 活出自我篇依次讲述命运、自我、关系、动力、思维、身体、情感； 终身成长篇依次讲述觉知、空间、创造、现实、自由、无常。 本书为活出自我篇。</p>
+										</div>
+									</div>
+								</div>
+								<div class="news-pager clearfix">
+									<div class="pull-left item">
+										<div class="text-info">
+											上一篇
+										</div>
+										<div class="text">
+											<a href="#">南沙图书馆新馆开工南沙图书馆新馆开工南沙图书馆新馆开工--南方日报报道</a>
+										</div>
+									</div>
+									<div class="pull-right item text-right">
+										<div class="text-info">
+											下一篇
+										</div>
+										<div class="text">
+											<a href="#">南沙图书馆新馆开工--南方日报报道</a>
+										</div>
+									</div>
+								</div>
 							</div>
-							<p>持有效身份证件（身份证、户口簿或护照等；未领身份证的未成年人须提供身份证号），可办理1张读者卡。</p>
-
-							<div class="font-18 mt30 mb10">
-								<strong>二、读者卡服务类型：</strong>
-							</div>
-							<table class="table table-editor table-bordered table-hover">
-								<thead>
-									<tr>
-										<th>读者卡类型</th>
-										<th>最大借阅量</th>
-										<th>借期</th>
-										<th>保证金</th>
-										<th>备注</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>VIP</td>
-										<td>图书或光盘15册（件）</td>
-										<td>1个月（可续期1个月）</td>
-										<td>免</td>
-										<td></td>
-									</tr>
-								</tbody>
-							</table>
-
-							<div class="font-18 mt30 mb10">
-								<strong>三、变更服务类型手续：</strong>
-							</div>
-							<p>办理读者卡3个月后，如需变更服务类型，带齐本人有效身份证件，更换新的服务类型。</p>
-
-							<div class="font-18 mt30 mb10">
-								<strong>四、补卡及更换新卡手续：</strong>
-							</div>
-							<p>读者卡遗失，可补办新卡。遗失读者卡的读者，应在办证时间内拨打电话39097182或39052638，或到办证处办理挂失登记手续。<br />若因未挂失或将卡转借他人而发生冒用情况，应自负相关赔偿之责及其他后果。<br />经核实无借书记录、注销原证并交纳工本费后，办理新证。</p>
-
-							<div class="font-18 mt30 mb10">
-								<strong>五、退卡手续：</strong>
-							</div>
-							<p>读者可凭证办理退卡手续。办理退卡的读者（14岁以下的读者退卡时须由家长陪同），须出示读者卡和其他个人有效证件。<br />在办理有关手续后，终止相应的服务。</p>
-
-							<div class="font-18 mt30 mb10">
-								<strong>六、办证服务时间：</strong>
-							</div>
-							<p>周二至周日 09:00-12:00 14:00-18:00 <br />逢周一闭馆；节假日服务时间另行通知</p>
-							
-							<div class="font-18 mt30 mb10">
-								<strong>七、本馆保留对本读者卡管理办法的修改权和解释权。</strong>
-							</div>
+							<!-- 新书推荐详情 -->
 						</div>
 					</div>
 				</div>
