--- a/南沙图书馆/src/reader-consult.html
+++ b/南沙图书馆/src/reader-consult.html
@@ -42,7 +42,7 @@
 				<div class="main clearfix">
 					<div class="aside">
 						<div class="title">
-							图书推荐
+							我是读者
 						</div>
 						<div class="nav">
 							<ul>
@@ -88,62 +88,240 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>我是读者</span> <span class="gap">/</span> 图书推荐
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>我是读者</span> <span class="gap">/</span> 读者咨询
 							</div>
 							<div class="text">
-								新书介绍
+								读者咨询
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							<!-- 新书推荐详情 -->
-							<div class="news-detail">
-								<div class="detail-title text-center mb20">
-									<strong class="font-20 mb10">拥有一个你说了算的人生</strong>
-									<div class="sub mt5">
-										发表于：2019-01-12　　　作者：南方都市报
+							<!-- 读者咨询 -->
+							<div class="site-tabs">
+								<ul>
+									<li class="active"><a href="JavaScript:;">常见问题</a></li>
+									<li><a href="JavaScript:;">现场咨询</a></li>
+									<li><a href="JavaScript:;">邮箱咨询</a></li>
+									<li><a href="JavaScript:;">读者留言</a></li>
+								</ul>
+							</div>
+
+							<div class="site-tabs-content">
+								<!-- 常见问题 -->
+								<div id="tab1" class="panel">
+									<div class="question-list">
+										<ul>
+											<li>
+												<a href="javascript:;">
+													<div class="pull-right">
+														<i class="icon icon-arrow-down icon-arrow-down-active"></i>
+													</div>
+													怎样续借图书及怎样在网上续借图书？能续借几次？
+												</a>
+												<div class="answer">
+													读者可拿借书证或书到图书馆由工作人员办理续借，每位读者最多只能续借1次，借期从续借成功当天算起31天。网上续借图书请进入图书馆主页－我的图书馆-按屏幕提示，输入“注册名”或“证号”，密码，然后点击“登录进入我的图书馆”，点击“图书续借”，选择您需要续借的图书。续借是否成功，系统有明显提示。续借操作完成后，应该再查询一下借书情况，进一步确认续借是否成功。借阅期内如遇闭馆或节假日借期顺延；校内读者借阅期内遇寒暑假顺延至假期之后
+												</div>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<div class="pull-right">
+														<i class="icon icon-arrow-down"></i>
+													</div>
+													怎样续借图书及怎样在网上续借图书？能续借几次？
+												</a>
+												<div class="answer">
+													读者可拿借书证或书到图书馆由工作人员办理续借，每位读者最多只能续借1次，借期从续借成功当天算起31天。网上续借图书请进入图书馆主页－我的图书馆-按屏幕提示，输入“注册名”或“证号”，密码，然后点击“登录进入我的图书馆”，点击“图书续借”，选择您需要续借的图书。续借是否成功，系统有明显提示。续借操作完成后，应该再查询一下借书情况，进一步确认续借是否成功。借阅期内如遇闭馆或节假日借期顺延；校内读者借阅期内遇寒暑假顺延至假期之后
+												</div>
+											</li>
+										</ul>
 									</div>
 								</div>
-								<div class="book-show">
-									<div class="img">
-										<img src="./assets/images/8.png" alt="">
-									</div>
-									<div class="book-detail">
-										<strong class="font-16">著者：</strong>	xxxxxx<br />
-										<strong class="font-16">出版社：</strong> xxxxxx<br />
-										<strong class="font-16">出版时间：</strong> 2019-01-01 <br />
-										<strong class="font-16">索书号：</strong> 44255-234
-										<div class="strong font-16 mt20 mb20">
-											图书简介
-										</div>
-										<div class="editor">
-											<p>一个人的生命，终究是为了活出自己。 如果你有幸在很小的时候就被告知这一点，并身体力行，那么你或许会有一个非常不同的人生起点。 自1992年考入北京大学心理学系，武志红对这个问题的思考不断深入，到现在已有25年。</p>
-											<p>在这期间，他通过十几本书、几百万字文字、上千篇文章，不断向自己和广大读者传达一个观点：成为你自己。</p>
-											<p>他不仅一直在身体力行这一哲学，还借助心理咨询和大量真实案例对当代社会人的心理状态有了细致入微的解读。</p>
-											<p>2019年，武志红老师推出迄今为止zui重要代表作《拥有一个你说了算的人生》，将自己多年的思考集中到这套书中，分活出自我篇和终身成长篇两册。其中， 活出自我篇依次讲述命运、自我、关系、动力、思维、身体、情感； 终身成长篇依次讲述觉知、空间、创造、现实、自由、无常。 本书为活出自我篇。</p>
-										</div>
+
+								<!-- 现场咨询 -->
+								<div id="tab2" class="panel">
+									<div class="editor">
+										<p>只要您来到了图书馆，对于在利用图书馆方面遇到的各种问题除了在我馆大厅咨询台问询以外，对于专题性问题还可以到图书馆二楼参考咨询部进行咨询。</p>
+										<p>地 点：位于本馆二楼东北侧202室</p>
+										<p>服务时间：</p>
+										<p> 周一： 10:00-12：00 14:00-17:30</p>
+										<p>周二至周五：8:30-12:00 14:00-17:30</p>
 									</div>
 								</div>
-								<div class="news-pager clearfix">
-									<div class="pull-left item">
-										<div class="text-info">
-											上一篇
-										</div>
-										<div class="text">
-											<a href="#">南沙图书馆新馆开工南沙图书馆新馆开工南沙图书馆新馆开工--南方日报报道</a>
-										</div>
+
+								<!-- 邮箱咨询 -->
+								<div id="tab3" class="panel">
+									<div class="consult-tips">
+										<i class="icon icon-mark"></i>
+										您可以就图书馆馆藏服务、资源利用、信息检索等方面的问题向我们提问，超出上述范围的问题恕不回答。 <br />
+										我们不提供财经投、医药健康等方面咨询及考试、作业辅导，提供的内容仅供参考。 <br />
+										对于一般性问题，我们致力于2至3个工作日内给予答复，对于较深入的问题，我们将在5个工作日内给予答复。 <br />
+										我们承诺严格遵守知识产权相关规定，尊重并保护用户隐私权。
 									</div>
-									<div class="pull-right item text-right">
-										<div class="text-info">
-											下一篇
+									<form class="feedback-form form mt30">
+										<div class="item-label">
+											<div class="label font-20">
+												咨询类型
+											</div>
+											<div class="control mt5">
+												<label><input type="radio" class="type" name="type"> &nbsp; <span class="mr50">一般咨询</span></label>
+												<label><input type="radio" class="type" name="type" checked> &nbsp; 其他</label>
+											</div>
 										</div>
-										<div class="text">
-											<a href="#">南沙图书馆新馆开工--南方日报报道</a>
+										<div class="item-label mt20">
+											<div class="label font-20">
+												标题
+											</div>
+											<div class="row mt5">
+												<div class="col-md-6">
+													<input type="text" placeholder="请输入问题标题" class="form-control input-lg" />
+												</div>
+											</div>
 										</div>
+										<div class="item-label mt20">
+											<div class="label font-20">
+												问题描述
+											</div>
+											<div class="control mt5">
+												<textarea rows="5" placeholder="请描述您的问题" class="form-control input-lg"></textarea>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="item-label mt20">
+													<div class="label font-20">
+														您的邮箱
+													</div>
+													<div class="row">
+														<div class="col-md-6">
+															<input type="text" placeholder="请如实填写，否则无法收到答案" class="form-control input-lg" />
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="col-md-4">
+												<div class="item-label mt20">
+													<div class="label font-20">
+														验证码
+													</div>
+													<div class="row mt5">
+														<div class="col-md-3">
+															<input type="text" placeholder="" class="form-control input-lg" />
+														</div>
+														<div class="col-md-3">
+															<img src="images/code.jpg" class="code" alt="" />
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="item-label mt30">
+											<div class="control">
+												<button type="submit" class="btn btn-primary btn-lg">提交</button>
+											</div>
+										</div>
+									</form>
+								</div>
+
+								<!-- 读者留言 -->
+								<div id="tab4" class="panel">
+									<div class="consult-tips">
+										<i class="icon icon-mark"></i>
+										您可以就图书馆馆藏服务、资源利用、信息检索等方面的问题向我们提问，超出上述范围的问题恕不回答。 <br />
+										我们不提供财经投、医药健康等方面咨询及考试、作业辅导，提供的内容仅供参考。 <br />
+										对于一般性问题，我们致力于2至3个工作日内给予答复，对于较深入的问题，我们将在5个工作日内给予答复。 <br />
+										我们承诺严格遵守知识产权相关规定，尊重并保护用户隐私权。
 									</div>
+									<div class="consult-list">
+										<table class="table table-consult table-hover">
+											<thead>
+												<tr>
+													<td>主题</td>
+													<td width="150">作者</td>
+													<td width="180">发布时间</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+												<tr>
+													<td>每天下午三点左右图书馆楼下的清洁工大声的聊天影响阅读</td>
+													<td>杨丽娟</td>
+													<td>2019-03-02 17:21</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+									<!-- 分页 -->
+									<ul class="pagination">
+										<li class="disabled">
+											<a href="#">
+												上一页
+											</a>
+										</li>
+										<li class="active"><a href="#">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#">5</a></li>
+										<li>
+											<a href="#">
+												下一页
+											</a>
+										</li>
+										<li>
+											<div class="total">
+												<input type="text" value="1" /> /24 页
+											</div>
+										</li>
+										<li><a href="#">跳转</a></li>
+									</ul>
+									<!-- 分页 -->
 								</div>
 							</div>
-							<!-- 新书推荐详情 -->
+							<!-- 读者咨询 -->
 						</div>
 					</div>
 				</div>
