--- a/南沙图书馆/src/index.html
+++ b/南沙图书馆/src/index.html
@@ -252,16 +252,221 @@
 							</div>
 						</div>
 					</div>
+					<div class="home-book-new">
+						<div class="book-title">
+							新 书 推 荐
+						</div>
+						<div class="list">
+							<ul>
+								<li> 
+									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
+									<a href="#">带着文化游名城</a>
+									<div class="text">
+										作者：刘飞滨 <br />
+										出版社：当代世界出版
+									</div>
+								</li>
+								<li> 
+									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
+									<a href="#">带着文化游名城</a>
+									<div class="text">
+										作者：刘飞滨 <br />
+										出版社：当代世界出版
+									</div>
+								</li>
+								<li> 
+									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
+									<a href="#">带着文化游名城</a>
+									<div class="text">
+										作者：刘飞滨 <br />
+										出版社：当代世界出版
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="hom-document">
+						<div class="document-title">本地文献推荐</div>
+						<div class="list">
+							<ul>
+								<li><a href="#"><i class="icon icon-block"></i> 库客（KUKE）数字音乐图书馆</a></li>
+								<li><a href="#"><i class="icon icon-block"></i> 新东方多媒体学习库</a></li>
+								<li><a href="#"><i class="icon icon-block"></i> ASCE Online Research Library </a></li>
+								<li><a href="#"><i class="icon icon-block"></i> J-STAGE电子期刊</a></li>
+								<li><a href="#"><i class="icon icon-block"></i> J-中国科技论文在线</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="full-page-item">
 				<div class="wrap">
-					
+					<div class="home-ele">
+						<div class="distribute">
+							<div class="img">
+								<img src="./assets/img-ele-map.png" alt="" />
+							</div>
+							<div class="t">
+								<a href="#" class="pull-right">查看所有区域</a>
+								电子借阅柜分布
+							</div>
+							<div class="list">
+								<ul>
+									<li><i>1</i> 南沙区东涌镇和乐一路10号文化中心</li>
+									<li><i>2</i> 南沙区珠江中路29</li>
+									<li><i>3</i> 南沙区南沙街道祈丰路图书馆</li>
+								</ul>
+								<ul>
+									<li><i>4</i> 中环路与同福街交叉口西南150米</li>
+									<li><i>5</i> 南沙区东涌镇和乐一路10号文化中心</li>
+									<li><i>6</i> 启航路与龙穴路交叉口南150米</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="home-ele-rows">
+						<div class="md">
+							<div class="item">
+								<span class="pull-right">
+									<strong>35,545</strong> 册
+								</span>
+								<i class="icon icon-borrow"></i>
+								当日借书册数:
+							</div>
+							<div class="item">
+								<span class="pull-right">
+									<strong>35,45</strong> 册
+								</span>
+								<i class="icon icon-back"></i>
+								当日还书册数:
+							</div>
+						</div>
+						<div class="md">
+							<div class="item">
+								<span class="pull-right">
+									<strong>35,545</strong> 人
+								</span>
+								<i class="icon icon-borrow"></i>
+								当日借书人次:
+							</div>
+							<div class="item">
+								<span class="pull-right">
+									<strong>35,45</strong> 人
+								</span>
+								<i class="icon icon-back"></i>
+								当日还书人次:
+							</div>
+						</div>
+						<div class="md link">
+							<div class="link-title">
+								友情链接:
+							</div>
+							<div class="list">
+								<ul>
+									<li><a href="#"><i></i> 链接标题</a></li>
+									<li><a href="#"><i></i> 链接标题</a></li>
+									<li><a href="#"><i></i> 链接标题</a></li>
+									<li><a href="#"><i></i> 链接标题</a></li>
+									<li><a href="#"><i></i> 链接标题</a></li>
+									<li><a href="#"><i></i> 链接标题</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="home-guide">
+						<ul>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-1"></i> 电子报刊
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-2"></i> 电子图书
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-3"></i> 南沙人文
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-4"></i> 主题资源
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-5"></i> 多媒体
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-6"></i> 试用资源
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-7"></i> 开放存储资源
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-ele-guide icon-ele-guide-8"></i> 综合数据库
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="full-page-item">
 				<div class="wrap">
-					
+					<div class="home-about">
+						<div class="left">
+							<img src="./assets/home-about.png" alt="" />
+						</div>
+						<div class="right">
+							<div class="t">关于南沙图书馆</div>
+							<div class="text">
+								南沙区图书馆位于南沙区丰泽东路，毗邻南沙区文化馆。建筑面积6200平方米、楼高4层，有阅览座位近500座。其中一楼设有广州少年儿童图书馆南沙分馆，阅览座位150余座。目前，馆藏文献资源30多万册（件），各类报刊近700种，涵盖了包括自然科学和社会科学等各学科知识领域,为读者提供馆内阅览和外借服务。为方便读者利用图书馆,每周开放72小时,并设有自习室、阅览室、无障碍设施、残障人士阅览室等，为各类读者群体提供便利服务。 南沙区图书馆是一所综合性的公共图书馆，2010年1月评定为国家一级图书馆。主要为社会各界人士提供文…
+							</div>
+							<a href="about.html" class="more">了解更多</a>
+						</div>
+					</div>
+					<div class="home-about-guide">
+						<ul>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-1"></i> 开放时间
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-2"></i> 借阅规则
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-3"></i> 交通指南
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-4"></i> 馆舍平面
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-5"></i> 办证须知
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="icon icon-about-guide icon-about-guide-6"></i> 服务项目
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<a href="javascript:;" class="global-scroll">
@@ -269,6 +474,30 @@
 				向下滚动查看更多
 			</a>
 		</div>
+	</div>
+
+	<!-- 通用左侧导航 -->
+	<div class="global-side-nav">
+		<ul>
+			<li>
+				<a href="#">
+					<i class="icon-side-login"></i>
+					登录
+				</a>
+				<a href="#">
+					<i class="icon-side-login"></i>
+					微信
+				</a>
+				<a href="#">
+					<i class="icon-side-login"></i>
+					微博
+				</a>
+				<a href="#">
+					<i class="icon-side-service"></i>
+					联系
+				</a>
+			</li>
+		</ul>
 	</div>
 	
 </body>
